--- a/src/VIEW/telaCadastroLivro/TelaCadastroLivro.form
+++ b/src/VIEW/telaCadastroLivro/TelaCadastroLivro.form
@@ -92,7 +92,7 @@
                                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                                   <Group type="102" attributes="0">
                                                       <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="txtBloco" alignment="0" min="-2" pref="341" max="-2" attributes="0"/>
+                                                          <Component id="txtSessao" alignment="0" min="-2" pref="341" max="-2" attributes="0"/>
                                                           <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                                                           <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                                                       </Group>
@@ -155,7 +155,7 @@
                       <Group type="102" attributes="0">
                           <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txtBloco" min="-2" pref="33" max="-2" attributes="0"/>
+                          <Component id="txtSessao" min="-2" pref="33" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
@@ -290,7 +290,7 @@
             <Property name="text" type="java.lang.String" value="Data de cadastro"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtBloco">
+        <Component class="javax.swing.JTextField" name="txtSessao">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Liberation Sans" size="18" style="0"/>
@@ -299,16 +299,13 @@
               <Insets value="[2, 12, 2, 6]"/>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtBlocoKeyTyped"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Liberation Sans" size="24" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Bloco"/>
+            <Property name="text" type="java.lang.String" value="Sess&#xe3;o"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtEditora">
